# commodities

./: .gitignore  ARCHITECTURE.txt  CALL_PUT_OPTIONS_NOTE.md  COMPLETION_CHECKLIST.txt  DASHBOARD_IMPROVEMENTS.md  DATA_README.txt  DELIVERABLES_DATA_INFRASTRUCTURE.txt  DOCUMENTATION_INDEX.md  EXCEL_EXPORT_GUIDE.md  FINAL_SUMMARY.txt  FOR_TEAM_LEAD.md  FRAMEWORK_COMPLETION.md  Layer 1 — ML Forecasting (DONE).txt  README.md  STEP5_COMPLETE.md  STEP5_SUMMARY.md  UPDATES_JAN28_2026.md  location.txt  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py  streamlit_app_old.py
.streamlit/: config.toml
configs/: eurusd_monthly.yml  example_monthly.yml  real_asset_monthly.yml
country_sources/: __init__.py  _common.py  brazil.py  ivory_coast.py  pakistan.py  sudan.py  tanzania.py  turkey.py  usa_cotton.py  west_africa.py
data/: update_log.json
docs/: EXECUTIVE_DASHBOARD_AUDIT.md  PROCUREMENT_ENGINE_FINAL_SPEC.md  PROCUREMENT_ENGINE_SPECIFICATION.md  PROCUREMENT_ENGINE_VALIDATION.md  UX1_EXECUTIVE_SUMMARY_WIREFRAME.md  UX2_EXECUTIVE_SUMMARY_IMPLEMENTATION.md  UX3B1_ENTERPRISE_DESIGN_SYSTEM.md  UX3B_HOLISTIC_UX_AUDIT.md  data_ingestion.md  decision_layer.md  economic_guardrails.md  invariants_and_extension_points.md  supabase_streamlit_cloud.md  workbook_business_rules.md
reports/: monthly_validation_report.md  origin_classification_report.md  procurement_strategy.csv  procurement_strategy_meta.json
scripts/: bootstrap_production.py  clean_consumption.py  clean_inventory.py  commodity_mapper.py  commodity_mapping.csv  consumption_data.py  data_pipeline.py  (+49 more)
(+88 files in other folders)
